AUTOMAKE_OPTIONS = foreign

luna_LDADD = @LUA_LIBS@
luna_CPPFLAGS = @LUA_CFLAGS@


bin_PROGRAMS = luna

luna_SOURCES = \
	src/luna.c \
	src/luna.h \
	src/bot.c \
	src/bot.h \
	src/handlers.c \
	src/handlers.h \
	src/channel.c \
	src/channel.h \
	src/user.c \
	src/user.h \
	src/config.c \
	src/config.h \
	src/irc.c \
	src/irc.h \
	src/state.c \
	src/state.h \
	src/util.c \
	src/util.h \
	src/net.c \
	src/net.h \
	src/logger.c \
	src/logger.h \
	src/linked_list.c \
	src/linked_list.h \
	src/mm.c \
	src/mm.h \
	src/lua_api/lua_api_functions.c \
	src/lua_api/lua_api_functions.h \
	src/lua_api/lua_manager.c \
	src/lua_api/lua_manager.h \
	src/lua_api/modules/lua_self.c \
	src/lua_api/modules/lua_self.h \
	src/lua_api/modules/lua_script.c \
	src/lua_api/modules/lua_script.h \
	src/lua_api/modules/lua_channel.c \
	src/lua_api/modules/lua_channel.h \
	src/lua_api/modules/lua_user.c \
	src/lua_api/modules/lua_user.h \
	src/lua_api/lua_util.c \
	src/lua_api/lua_util.h
